# Copyright 2018-2022 Cargill Incorporated
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "splinter-rest-api-common"
version = "0.7.1"
authors = ["Cargill Incorporated"]
edition = "2021"
license = "Apache-2.0"
description = """\
    Implementations common between all versions of the splinter REST API.
"""

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", optional = true }
splinter = { path = "../../libsplinter" }
scabbard = { path = "../../services/scabbard/libscabbard", optional = true }

[features]
default = [
    "scabbard-service",
]

stable = [
    # The stable feature extends default:
    "default"
    # The following features are stable:
]

experimental = [
    # The experimental feature extends stable:
    "stable",
    # The following features are experimental:
]

scabbard-service = ["scabbard", "splinter/rest-api", "splinter/rest-api-actix-web-1", "serde_json"]
