# Copyright 2018-2022 Cargill Incorporated
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "splinter-rest-api-common"
version = "0.7.1"
authors = ["Cargill Incorporated"]
edition = "2021"
license = "Apache-2.0"
description = """\
    Implementations common between all versions of the splinter REST API.
"""

[dependencies]
cylinder = { version = "0.2.1", optional = true }
log =  "0.4"
rand = "0.8"
jsonwebtoken = { version = "7.0" }
openssl = { version = "0.10", optional = true }
percent-encoding = { version = "2.0", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", optional = true }
splinter = { path = "../../libsplinter" }
scabbard = { path = "../../services/scabbard/libscabbard", optional = true }

[dev-dependencies]
tempfile = "3"

[features]
default = [
    "scabbard-service",
]

stable = [
    # The stable feature extends default:
    "default",
    # The following features are stable:
    "authorization",
    "biome-credentials",
    "oauth",
    "rbac"
]

experimental = [
    # The experimental feature extends stable:
    "stable",
    # The following features are experimental:
]

authorization = ["splinter/authorization"]
authorization-handler-rbac = []
biome = ["splinter/biome"]
biome-credentials = ["splinter/biome-credentials"]
cylinder-jwt = ["cylinder"]
https-bind = ["openssl"]
oauth = ["splinter/oauth"]
rbac = ["splinter/authorization-handler-rbac"]
scabbard-service = ["scabbard", "splinter/rest-api", "splinter/rest-api-actix-web-1", "serde_json"]
registry = ["percent-encoding"]
service-endpoint = []
