# Copyright 2018-2020 Cargill Incorporated
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "cm-repl-daemon"
version = "0.1.0"
authors = ["Cargill Incorporated"]
edition = "2018"

[dependencies]
clap = "2.32"
ctrlc = "3.0"
flexi_logger = "0.14"
serde = "1.0"
serde_json = "1.0"
splinter = { path = "../../../libsplinter", features = ["connection-manager", "matrix", "rest-api"]}
log = "0.4"
