[package]
name = "cm-repl-daemon"
version = "0.1.0"
authors = ["Cargill Incorporated"]
edition = "2018"

[dependencies]
splinter = { path = "../../../libsplinter", features = ["connection-manager", "matrix"]}
serde = "1.0"
serde_json = "1.0"
log = "0.4"
flexi_logger = "0.14"
clap = "2.32"
ctrlc = "3.0"
