# Copyright 2018-2020 Cargill Incorporated
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "scabbard-cli"
version = "0.4.2"
authors = ["Cargill Incorporated"]
edition = "2018"
license = "Apache-2.0"
description = """\
    Scabbard is a Splinter service that runs the Sawtooth Sabre smart contract \
    engine using Hyperledger Transact for state management. Scabbard uses \
    two-phase consensus to reach agreement on transactions.
"""

[[bin]]
name = "scabbard"
path = "src/main.rs"

[dependencies]
clap = "2"
dirs = "2.0"
flexi_logger = "0.14"
log = "0.4"
sabre-sdk = "0.5"
sawtooth-sdk = { version = "0.4", features = ["transact-compat"] }
transact = { version = "0.2", features = ["contract-archive"] }
scabbard = { path = "../libscabbard", features = ["client"] }

[dev-dependencies]
serial_test = "0.3"
tempfile = "3.1"

[features]
default = []

stable = ["default"]

experimental = [
  # The experimental feature extends stable:
  "stable",
  # The following features are experimental:
  "smart-permissions",
]

smart-permissions = []

[package.metadata.deb]
maintainer = "The Splinter Team"
depends = "$auto"
assets = [
    ["packaging/man/*.1", "/usr/share/man/man1", "644"],
    ["target/release/scabbard", "/usr/bin/scabbard", "755"]
]
maintainer-scripts = "packaging/ubuntu"
