# Copyright 2018-2021 Cargill Incorporated
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "scabbard-cli"
version = "0.6.3"
authors = ["Cargill Incorporated"]
edition = "2018"
license = "Apache-2.0"
description = """\
    Scabbard is a Splinter service that runs the Sawtooth Sabre smart contract \
    engine using Hyperledger Transact for state management. Scabbard uses \
    two-phase consensus to reach agreement on transactions.
"""

[[bin]]
name = "scabbard"
path = "src/main.rs"

[dependencies]
clap = "2"
cylinder = { version = "0.2.2", features = ["jwt", "key-load"] }
dirs = "4"
flexi_logger = { version = "0.21", features = ["use_chrono_for_offset"] }
log = "0.4"
sabre-sdk = "0.8"
transact = { version = "0.4", features = ["contract-archive"] }
scabbard = { path = "../libscabbard", features = ["client-reqwest"], default-features=false }

[features]
default = []

stable = ["default"]

experimental = [
  # The experimental feature extends stable:
  "stable",
  # The following features are experimental:
]

[package.metadata.deb]
maintainer = "The Splinter Team"
depends = "$auto"
assets = [
    ["packaging/man/*.1", "/usr/share/man/man1", "644"],
    ["target/release/scabbard", "/usr/bin/scabbard", "755"]
]
maintainer-scripts = "packaging/ubuntu"
