# Copyright 2018-2021 Cargill Incorporated
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "scabbard"
version = "0.5.27"
authors = ["Cargill Incorporated"]
edition = "2018"
license = "Apache-2.0"
description = """\
    Scabbard is a Splinter service that runs the Sawtooth Sabre smart contract \
    engine using Hyperledger Transact for state management. Scabbard uses \
    two-phase consensus to reach agreement on transactions.
"""

[dependencies]
actix-web = { version = "1.0", optional = true, default-features = false, features = ["flate2-zlib"] }
cylinder = "0.2"
diesel = { version = "1.0", features = ["r2d2", "serde_json"], optional = true }
diesel_migrations = { version = "1.4", optional = true }
futures = { version = "0.1", optional = true }
log = { version = "0.4", optional = true }
metrics = { version = "0.17", optional = true}
openssl = "0.10"
protobuf = "2.23"
reqwest = { version = "0.11", optional = true, features = ["blocking", "json"] }
sawtooth-sabre = "0.7.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
splinter = { path = "../../../libsplinter" }
transact = { version = "0.3.13", features = ["sawtooth-compat", "state-merkle-sql"] }

[dependencies.sawtooth]
version = "0.6.7"
default-features = false
features = ["lmdb", "transaction-receipt-store"]

[dev-dependencies]
tempdir = "0.3"
transact = { version = "0.3.13", features = ["family-command", "sawtooth-compat", "state-merkle-sql"] }

[build-dependencies]
protoc-rust = "2.14"
glob = "0.2"

[features]
default = ["splinter-service"]

stable = [
  "authorization",
  "client",
  "client-reqwest",
  "default",
  "events",
  "lmdb",
  "metrics",
  "postgres",
  "rest-api",
  "rest-api-actix",
  "sqlite",
]

experimental = [
  # The experimental feature extends stable:
  "stable",
  # The following features are experimental:
  "https",
]

authorization = ["splinter/authorization"]
client = []
client-reqwest = ["client", "log", "reqwest"]
events = ["splinter/events"]
https = []
lmdb = []
postgres = ["diesel/postgres", "diesel_migrations", "log", "sawtooth/postgres", "transact/postgres"]
rest-api = ["futures", "splinter/rest-api"]
rest-api-actix = ["actix-web", "splinter/rest-api-actix"]
splinter-service = ["log"]
sqlite = ["diesel/sqlite", "diesel_migrations", "log", "sawtooth/sqlite", "transact/sqlite"]
