# Copyright 2018-2022 Cargill Incorporated
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "scabbard"
version = "0.7.1"
authors = ["Cargill Incorporated"]
edition = "2018"
license = "Apache-2.0"
description = """\
    Scabbard is a Splinter service that runs the Sawtooth Sabre smart contract \
    engine using Hyperledger Transact for state management. Scabbard uses \
    two-phase consensus to reach agreement on transactions.
"""

[dependencies]
actix-web = { version = "1.0", optional = true, default-features = false }
chrono = { version = "0.4", optional = true}
cylinder = "0.2"
diesel = { version = "1.0", features = ["chrono","r2d2", "serde_json"], optional = true }
diesel_migrations = { version = "1.4", optional = true }
futures = { version = "0.1", optional = true }
log = { version = "0.4", optional = true }
metrics = { version = "0.17", optional = true}
openssl = "0.10"
protobuf = "2.23"
reqwest = { version = "0.11", optional = true, features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
splinter = { path = "../../../libsplinter", features = ["service"] }
transact = { version = "0.5", features = ["state-merkle-sql", "family-sabre"] }

[dependencies.augrim]
version = "0.1"
optional = true
features = ["algorithm-two-phase-commit"]

[dependencies.sawtooth]
version = "0.8"
optional = true
default-features = false
features = ["lmdb", "transaction-receipt-store"]

[dev-dependencies]
transact = { version = "0.5", features = ["family-command", "family-command-transaction-builder", "state-merkle-sql"] }
splinter = { path = "../../../libsplinter", features = ["diesel"]}

[build-dependencies]
protoc-rust = "2.14"
glob = "0.3"

[features]
default = ["splinter-service"]

stable = [
  "authorization",
  "client",
  "client-reqwest",
  "default",
  "events",
  "lmdb",
  "metrics",
  "postgres",
  "rest-api",
  "rest-api-actix-web-1",
  "sqlite",
]

experimental = [
  # The experimental feature extends stable:
  "stable",
  # The following features are experimental:
  "diesel-postgres-tests",
  "https",
  "scabbardv3",
  "scabbardv3-consensus",
  "scabbardv3-consensus-action-runner",
  "scabbardv3-consensus-runner",
  "scabbardv3-store",
  "scabbardv3-publisher",
  "scabbardv3-supervisor"
]

authorization = ["splinter/authorization"]
client = []
client-reqwest = ["client", "log", "reqwest"]
diesel-postgres-tests = ["postgres"]
events = ["splinter/events"]
https = []
lmdb = []
postgres = ["diesel/postgres", "diesel_migrations", "log", "sawtooth/postgres", "transact/postgres"]
rest-api = ["futures", "splinter/rest-api"]
rest-api-actix-web-1 = ["actix-web", "rest-api", "splinter/rest-api-actix-web-1"]
scabbardv3-consensus = ["augrim"]
scabbardv3-consensus-action-runner = [
    "scabbardv3-consensus",
    "splinter/service-message-sender-factory",
    ]
scabbardv3-consensus-runner = ["scabbardv3-consensus-action-runner"]
scabbardv3-publisher = ["sawtooth/artifact-creator",]
scabbardv3-supervisor = ["scabbardv3-publisher"]
scabbardv3 = [
    "scabbardv3-consensus-runner",
    "scabbardv3-store",
    "scabbardv3-supervisor",
    "splinter/service-arguments-converter",
    "splinter/service-lifecycle",
    "splinter/service-message-handler",
    "splinter/service-message-handler-factory",
    "splinter/service-timer-alarm-factory",
    "splinter/service-timer-filter",
    "splinter/service-timer-handler",
    "splinter/service-timer-handler-factory",
    "splinter/service-message-sender-factory",
    ]
scabbardv3-store = ["chrono"]
splinter-service = ["log", "sawtooth"]
sqlite = ["diesel/sqlite", "diesel_migrations", "log", "sawtooth/sqlite", "transact/sqlite"]
